Sun Jun 10 06:55:15 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data.h (fuckernut): Example